# rcsync

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  defaults.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  rclone.rs  watcher.rs
src/lib/: BrowseRemote.svelte  ConfirmDialog.svelte  Dashboard.svelte  LogOutput.svelte  ProjectCard.svelte  Settings.svelte  ShortcutsHelp.svelte  types.ts
